# pekauto-backend

./: Dockerfile  Makefile  README.md  alembic.ini  db.sqlite3  manage.py  pyproject.toml
alembic/versions/: 915128c4baf4_create_vin_table.py
backend/: models.py  schemas.py  urls.py  views.py
pekauto/: asgi.py  dir.py  settings.py  urls.py  wsgi.py
