[tool.poetry]
name = "pekauto"
version = "0.1.0"
description = ""
authors = ["welfi <welfi.kharroubi@esprit.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pandantic = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
